[gd_scene load_steps=7 format=2]

[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButtonWithTooltip.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/Assets/PlayerGUI_ButtonStandard_SideBorder.png" type="Texture" id=3]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/Assets/PlayerGUI_ButtonStandard_FillBackground_Normal.png" type="Texture" id=4]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/PlayerGUI_ButtonStandard.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="PlayerGUI_ButtonStandard" type="MarginContainer"]
margin_right = 50.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 30 )
mouse_filter = 2
script = ExtResource( 5 )

[node name="BodyBackground" type="TextureRect" parent="."]
margin_right = 50.0
margin_bottom = 31.0
mouse_filter = 2
texture = ExtResource( 4 )
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="."]
margin_right = 3.0
margin_bottom = 31.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="."]
margin_left = 47.0
margin_right = 50.0
margin_bottom = 31.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="."]
margin_right = 50.0
margin_bottom = 3.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="."]
margin_top = 28.0
margin_right = 50.0
margin_bottom = 31.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="ContentPanel" type="MarginContainer" parent="."]
margin_right = 50.0
margin_bottom = 31.0
mouse_filter = 2
custom_constants/margin_right = 6
custom_constants/margin_top = 7
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="ContentPanel"]
margin_left = 6.0
margin_top = 7.0
margin_right = 44.0
margin_bottom = 25.0

[node name="MarginContainer" type="MarginContainer" parent="ContentPanel/HBoxContainer"]
margin_right = 38.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_constants/margin_top = 1

[node name="TextLabel" type="Label" parent="ContentPanel/HBoxContainer/MarginContainer"]
margin_top = 1.0
margin_right = 38.0
margin_bottom = 18.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="ButtonIcon" type="TextureRect" parent="ContentPanel/HBoxContainer"]
visible = false
margin_left = 38.0
margin_right = 38.0
margin_bottom = 17.0

[node name="AdvancedButtonWithTooltip" parent="." instance=ExtResource( 1 )]
margin_right = 50.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
about_button_index_trigger = 2
define_tooltip_construction_in_button = false
